Regression: Crash when creating a scene copy with video sequencer open #97133

Closed
opened 2022-04-07 05:06:30 +02:00 by Aaron Carlisle · 9 comments
Member

System Information
Operating system: Linux-5.16.11-76051611-generic-x86_64-with-glibc2.34 64 Bits
Graphics card: Mesa Intel(R) UHD Graphics (TGL GT1) Intel 4.6 (Core Profile) Mesa 21.3.5

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: Unknown Unknown, hash: 81ec3dce6542f996e5d61017fab83bd721b61822
Worked: 3.1

Caused by 277fa2f441

Short description of error
When crating a new duplicate (full copy) scene with the video editing workspace open causes Blender to segfault.

Exact steps for others to reproduce the error

  • Create a video editing project
  • Make a duplicate scene
**System Information** Operating system: Linux-5.16.11-76051611-generic-x86_64-with-glibc2.34 64 Bits Graphics card: Mesa Intel(R) UHD Graphics (TGL GT1) Intel 4.6 (Core Profile) Mesa 21.3.5 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: Unknown Unknown, hash: `81ec3dce6542f996e5d61017fab83bd721b61822` Worked: 3.1 Caused by 277fa2f441 **Short description of error** When crating a new duplicate (full copy) scene with the video editing workspace open causes Blender to segfault. **Exact steps for others to reproduce the error** - Create a video editing project - Make a duplicate scene
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

#97141 was marked as duplicate of this issue

#97141 was marked as duplicate of this issue
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @iss

Added subscriber: @iss
Member

Crash started to happen after- 277fa2f441
@iss, can you check?

Crash started to happen after- 277fa2f441 @iss, can you check?
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes
Philipp Oeser changed title from Crash when creating a scene copy with video sequencer open to Regression: Crash when creating a scene copy with video sequencer open 2022-04-07 17:05:55 +02:00

This issue was referenced by 69a4d113e8

This issue was referenced by 69a4d113e8dd3f2f267536b2b93af2540f3a0978

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-04-09 18:17:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97133
No description provided.