Fix T97133: Crash when creating a scene copy

Crash happened in sequencer editor, because pointer to displayed
channels was not set in `scene_copy_data`.